--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
     "openai": "^4.80.0",
+    "translate-google": "^1.5.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
