--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "start": "node server.js",
+    "dev": "tsc -w & nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,13 +18,19 @@
     "@types/node": "^22.10.7",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
+    "chromedriver": "^132.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "locate-chrome": "^0.1.1",
     "nodemon": "^3.1.9",
     "openai": "^4.80.0",
+    "selenium-webdriver": "^4.28.1",
     "translate-google": "^1.5.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
+  },
+  "devDependencies": {
+    "@types/selenium-webdriver": "^4.1.28"
   }
 }
