--- a/backend/package.json
+++ b/backend/package.json
@@ -1,36 +1,28 @@
 {
-  "name": "backend",
+  "name": "stock-analysis-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend for Stock Analysis Application",
+  "main": "server.js",
   "scripts": {
-    "build": "tsc",
     "start": "node server.js",
-    "dev": "tsc -w & nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.10.7",
-    "axios": "^1.7.9",
-    "cheerio": "^1.0.0",
-    "chromedriver": "^132.0.1",
+    "axios": "^1.6.5",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "locate-chrome": "^0.1.1",
-    "nodemon": "^3.1.9",
-    "openai": "^4.80.0",
-    "selenium-webdriver": "^4.28.1",
-    "translate-google": "^1.5.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "openai": "^4.24.7",
+    "translate-google": "^1.5.0"
   },
   "devDependencies": {
-    "@types/selenium-webdriver": "^4.1.28"
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
