--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: stock-analysis-backend
     env: node
-    buildCommand: npm run build
+    buildCommand: npm install && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_ENV
@@ -13,6 +13,11 @@ services:
         sync: false
       - key: NEWS_API_KEY
         sync: false
+    buildFilter:
+      paths:
+      - backend/**
+      - package.json
+      - render.yaml
 
   - type: web
     name: stock-analysis-frontend
