--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: stock-analysis-backend
     env: node
-    buildCommand: npm install --legacy-peer-deps && npm run build
-    startCommand: npm start
+    buildCommand: cd backend && npm install --legacy-peer-deps
+    startCommand: cd backend && npm start
     envVars:
       - key: NODE_ENV
         value: production
