--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,8 @@ services:
     name: stock-analysis-backend
     env: node
     buildCommand: cd backend && npm install --legacy-peer-deps
-    startCommand: cd backend && npm start
+    startCommand: cd backend && node server.js
+    rootDirectory: backend
     envVars:
       - key: NODE_ENV
         value: production
@@ -24,6 +25,7 @@ services:
     env: node
     buildCommand: cd frontend && npm install --legacy-peer-deps && npm run build
     startCommand: cd frontend && npm run preview
+    rootDirectory: frontend
     envVars:
       - key: NODE_ENV
         value: production 
