--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: stock-analysis-backend
     env: node
-    buildCommand: npm install --legacy-peer-deps
+    buildCommand: cd backend && npm install --legacy-peer-deps && cd .. && npm install --legacy-peer-deps
     startCommand: node backend/server.js
     envVars:
       - key: NODE_ENV
@@ -22,9 +22,8 @@ services:
   - type: web
     name: stock-analysis-frontend
     env: node
-    buildCommand: npm install --legacy-peer-deps && npm run build
-    startCommand: npm run preview
-    rootDirectory: frontend
+    buildCommand: cd frontend && npm install --legacy-peer-deps && npm run build
+    startCommand: cd frontend && npm run preview
     envVars:
       - key: NODE_ENV
         value: production 
