--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^5.15.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "axios": "^1.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
