--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --minify terser",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
