--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "axios": "^1.3.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "@vitejs/plugin-react": "^4.2.1"
+    "@vitejs/plugin-react": "^4.2.1",
+    "terser": "^5.27.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
