--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: stock-analysis-backend
     env: node
     buildCommand: cd backend && npm install --legacy-peer-deps
-    startCommand: node backend/server.js
+    startCommand: cd backend && node server.js
     envVars:
       - key: NODE_ENV
         value: production
@@ -13,6 +13,13 @@ services:
         sync: false
       - key: NEWS_API_KEY
         sync: false
+    healthCheckPath: /health
+    healthCheckTimeout: 100
+    autoDeploy: true
+    scaling:
+      minInstances: 1
+      maxInstances: 1
+      targetMemoryPercent: 80
     buildFilter:
       paths:
       - backend/**
@@ -26,4 +33,9 @@ services:
     startCommand: cd frontend && npm run preview
     envVars:
       - key: NODE_ENV
-        value: production 
+        value: production
+    autoDeploy: true
+    scaling:
+      minInstances: 1
+      maxInstances: 1
+      targetMemoryPercent: 80 
